# horse-racing-data

./: .dockerignore  .env.example  .gitignore  .mcp.json  .shellcheckrc  AGENTS.md  CLAUDE.md  FINISH_POSITION_MODEL_V6_STACKED.md  FINISH_POSITION_MODEL_V7_LINEAGE.md  FINISH_POSITION_PREDICTION_DESIGN.md  PLACE_ACCURACY_IMPROVEMENT_2026-05-20.md  README.md  lefthook.yml  oxlint.json  package.json  pyrightconfig.json
apps/finish-position-predict-container/: DEPLOY.md  Dockerfile  package.json  pyproject.toml  pyrightconfig.json
apps/finish-position-predict-container/scripts/: verify_member_feature_coverage.py
apps/finish-position-predict-container/src/: catboost_adapter.py  db_driver.py  lightgbm_adapter.py  pipeline_runner.py  predict_upcoming.py  realtime_odds_fetcher.py  weather_fetcher.py  xgboost_adapter.py
apps/finish-position-predict-container/src/predict_lib/: __init__.py  audit.py  booster_pool.py  cell_router.py  cell_routing.json  conn_url.py  dedupe.py  ensemble_routing.py  ensemble_scorer.py  etop2_override.py  late_binding.py  model_meta.json  model_meta.py  nar_etop2_override.py  per_class.py  pipeline_args.py  race_id.py  rank.py  rescore.py  scorer.py  serve.py  subgroup.py  upcoming.py  upsert_sql.py
apps/finish-position-predict-container/tests/: test_audit.py  test_booster_pool.py  test_cell_router.py  test_conn_url.py  test_db_driver.py  test_dedupe.py  test_ensemble_routing.py  test_ensemble_scorer.py  test_etop2_override.py  test_late_binding.py  test_model_meta.py  test_nar_etop2_override.py  test_per_class.py  test_pipeline_args.py  test_pipeline_runner.py  test_predict_upcoming.py  test_race_id.py  test_rank.py  test_realtime_odds_fetcher.py  test_rescore.py  test_scorer.py  test_serve.py  test_subgroup.py  test_upcoming.py  test_upsert_sql.py  test_weather_fetcher.py
apps/pc-keiba-viewer/: .env.example  .gitignore  .oxfmtrc.json  .oxlintrc.json  CLAUDE.md  cloudflare-env.d.ts  eslint.config.mjs  next.config.ts  package.json  pyproject.toml  tsconfig.json  vitest.config.ts  wrangler.dev.jsonc  wrangler.jsonc
apps/pc-keiba-viewer/docs/probes/: jra-barei-moshoku-summer-female-weather-2026-06-24.md  jra-blinker-ablation-2026-06-20.md  jra-blinker-pattern-af-ablation-2026-06-20.md  jra-draw-distspeed-momentum-ablation-2026-06-20.md  jra-draw-distspeed-place-preserving-2026-06-20.md  jra-jockey-triple-interaction.md  jra-jockey-triple-perclass-2026-06-19.md  jra-rs-venue-dist-perclass-2026-06-19.md  jra-rs-venue-dynamic-subgroup-2026-06-19.md  jra-season-sex-weight-ablation-2026-06-20.md  jra-season-sex-weight-probe-2026-06-20.md  jra-sex-season-dynamic-subgroup-2026-06-19.md  jra-sex-season-weight-perclass-2026-06-19.md  jra-track-bias-perclass-2026-06-19.md  jra-trackbias-dynamic-subgroup-2026-06-19.md  jra-venue-accuracy-investigation-2026-06-19.md  jra-venue-cell-investigation-round2-2026-06-20.md  jra-venue-hypothesis-verification-2026-06-19.md  jra-weight-dynamics-dynamic-subgroup-2026-06-19.md  nar-etop2-perclass-routing-2026-06-19.md
apps/pc-keiba-viewer/finish-position/lookups/: course-numerical-features.parquet
apps/pc-keiba-viewer/scripts/: README-win5-overlay.md  com.kkkaoru.win5-overlay.plist  train-env.sh
apps/pc-keiba-viewer/src/: worker.test.ts  worker.ts
apps/pc-keiba-viewer/tests/: test_add_baba_pedigree_affinity_features.py  test_add_banei_futan_class_features.py  test_add_banei_grade_career_features.py  test_add_class_features.py  test_add_course_numerical_features.py  test_add_exotic_odds_features.py  test_add_futan_juryo_features.py  test_add_grade_race_lineage_features.py  test_add_head_to_head_features.py  test_add_horse_locality_features.py  test_add_jockey_triple_features.py  test_add_kohan3f_going_features.py  test_add_market_signal_features.py  test_add_near_miss_features.py  test_add_pacestyle_features.py  test_add_race_internal_features.py  test_add_relationship_r1_features.py  test_add_similar_race_features.py  test_add_sire_venue_bias_features.py  test_add_trainer_stable_affinity_features.py  test_aggregate_bucket_eval_duckdb.py  test_build_cell_models.py  test_calibrate_finish_position.py  test_cleanup_tmp.py  test_compare_corner_position_predictions.py  test_compare_running_style_predictions.py  test_continuous_learner.py  test_corner_lightgbm.py  test_corner_position_lightgbm.py  test_evaluate_running_style_pipeline.py  test_feature_explorer.py  test_feature_registry.py  test_feature_selection_policy.py  test_finish_position_catboost.py  test_finish_position_features_duckdb.py  test_finish_position_features_duckdb_integration.py  test_finish_position_lightgbm.py  test_finish_position_transformer.py  test_finish_position_version.py  test_finish_position_xgboost.py  (+31 more)
scripts/: CLAUDE.md  install-pc-keiba-auto-update.ps1  pc-keiba-auto-update.py  pc_keiba_auto_update.py  pyproject.toml  pyrightconfig.json  racing_venue_weather.py  setup-git-hooks.sh  start-db-and-viewer.sh  unblock-pc-keiba-database.ps1  venue_coords.json  verify_feature_parity.py
scripts/journals/: .gitignore  README.md  jstage.py  reflow_es.py  test_jstage.py  test_reflow_es.py
scripts/launchd/: README.md  com.kkk4oru.finish-position-predict.plist  com.kkk4oru.odds-closing-backfill.plist  com.kkk4oru.pc-keiba-health-monitor.plist  com.kkk4oru.race-prediction-guard.plist  com.kkk4oru.racing-venue-weather-daily.plist  finish-position-predict-daily.sh  odds-closing-backfill-daily.sh  pc-keiba-health-monitor-README.md  pc-keiba-health-monitor.sh  race-prediction-guard.sh  racing-venue-weather-daily.sh
scripts/launchd/health-monitor-fixtures/: fail__queue_backlog.json  fail__today_results_coverage.json  fail__training_sample.json  fail__trends_sample.json  fetch_logs_results_ok.json  fetch_logs_weights_ok.json  queue_backlog.json  today_results_coverage.json  training_sample.json  trends_sample.json  weight_freshness.json
scripts/stubs/pywinauto/: __init__.pyi  findwindows.pyi  timings.pyi
scripts/tests/: conftest.py  test_pc_keiba_auto_update.py  test_racing_venue_weather.py  test_verify_feature_parity.py
(+1561 files in other folders)
