[project]
name = "horse-racing-data-scripts"
version = "0.0.0"
description = "Repo-root Python scripts (PC-KEIBA Database auto-update etc.)"
requires-python = ">=3.12"
dependencies = ["psutil>=7.0"]

[dependency-groups]
dev = ["basedpyright>=1.34.0", "pytest>=8.4.0", "pytest-cov>=7.0.0", "ruff>=0.7.0", "ty>=0.0.35"]

[tool.ruff]
extend-include = ["*.pyi"]

[tool.ruff.lint]
# Pyflakes (F): undefined-name, unused-import 等
select = ["F"]

[tool.uv]
package = false

# basedpyright は scripts/pyrightconfig.json を読む (priority 上位)。

[tool.ty.environment]
python-version = "3.12"
python-platform = "win32"
python = ".venv/bin/python"
extra-paths = ["stubs"]

[tool.pytest.ini_options]
addopts = "--cov=pc_keiba_auto_update --cov-report=term-missing --cov-fail-under=95"
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["pc_keiba_auto_update"]

[tool.coverage.report]
exclude_lines = [
  "if __name__ == .__main__.:",
  "raise SystemExit",
  "pragma: no cover",
  # Protocol メソッド本体は実行されないので除外 (`...` 単独行)
  '^\s*\.\.\.$',
]
show_missing = true
partial_branches = ["pragma: no branch"]
